--- a/login.html
+++ b/login.html
@@ -1,18 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - Raasystem</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Raasystem | Login/Signup</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+    }
+
+    header {
+      background-color: #000;
+      padding: 14px 0;
+    }
+
+    .header-container {
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+    }
+
+    .logo {
+      color: white;
+      font-weight: bold;
+      font-size: 1.5rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 6px 12px;
+      border-radius: 4px;
+    }
+
+    nav ul li a.active {
+      background-color: #fff;
+      color: #000;
+    }
+
+    nav ul li a:hover {
+      background-color: #004080;
+      color: white;
+    }
+
+    /* Hero Section */
+    .hero {
+      background: linear-gradient(135deg, #004080, #0074d9);
+      color: white;
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: 2.8rem;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .login-section {
+      max-width: 600px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .login-section h2 {
+      text-align: center;
+      color: #004080;
+      margin-bottom: 20px;
+    }
+
+    .login-section form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .input-field {
+      padding: 10px;
+      font-size: 1rem;
+      border-radius: 4px;
+      border: 1px solid #ddd;
+      box-sizing: border-box;
+    }
+
+    .button {
+      background-color: #004080;
+      color: white;
+      padding: 12px;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      font-size: 1.1rem;
+    }
+
+    .button:hover {
+      background-color: #0056b3;
+    }
+
+    .toggle-btns {
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .toggle-btns button {
+      background-color: #0074d9;
+      color: white;
+      padding: 10px 20px;
+      font-size: 1rem;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    .toggle-btns button:hover {
+      background-color: #004080;
+    }
+
+    .slogan {
+      font-size: 1.5rem;
+      color: white;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    footer {
+      background-color: #f1f1f1;
+      padding: 20px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+  </style>
 </head>
+
 <body>
-  <main>
-    <h1>Login to Your Account</h1>
-    <form>
-      <input type="email" placeholder="Email" required /><br/>
-      <input type="password" placeholder="Password" required /><br/>
-      <button type="submit">Login</button>
+
+  <!-- Header Section -->
+  <header>
+    <div class="header-container">
+      <div class="logo">Raasystem</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="solutions.html">Solutions</a></li>
+          <li><a href="how-it-works.html">How It Works</a></li>
+          <li><a href="integrations.html">Integrations</a></li>
+          <li><a href="features.html">Features</a></li>
+          <li><a href="get-started.html">Get Started</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="login.html" class="active">Login</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <div class="hero">
+    <h1>Welcome Back to Raasystem</h1>
+    <p>Access your account or create a new one to unlock the power of blockchain, AI, and finance.</p>
+    <div class="slogan">
+      "Seamlessly Converging Finance and Technology for You"
+    </div>
+  </div>
+
+  <!-- Login/Signup Section -->
+  <div class="login-section">
+    <h2 id="form-title">Sign In</h2>
+
+    <form id="login-form">
+      <input type="email" class="input-field" placeholder="Email" required />
+      <input type="password" class="input-field" placeholder="Password" required />
+      <button type="submit" class="button">Sign In</button>
     </form>
-  </main>
+
+    <form id="signup-form" style="display:none;">
+      <input type="text" class="input-field" placeholder="Full Name" required />
+      <input type="email" class="input-field" placeholder="Email" required />
+      <input type="password" class="input-field" placeholder="Password" required />
+      <input type="password" class="input-field" placeholder="Confirm Password" required />
+      <button type="submit" class="button">Create Account</button>
+    </form>
+
+    <div class="toggle-btns">
+      <button id="sign-in-btn">Sign In</button>
+      <button id="sign-up-btn">Sign Up</button>
+    </div>
+  </div>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2025 Raasystem | All Rights Reserved</p>
+  </footer>
+
+  <script>
+    // Toggle between Sign In and Sign Up forms
+    const signInBtn = document.getElementById('sign-in-btn');
+    const signUpBtn = document.getElementById('sign-up-btn');
+    const formTitle = document.getElementById('form-title');
+    const loginForm = document.getElementById('login-form');
+    const signupForm = document.getElementById('signup-form');
+
+    signInBtn.addEventListener('click', () => {
+      formTitle.innerText = 'Sign In';
+      loginForm.style.display = 'block';
+      signupForm.style.display = 'none';
+    });
+
+    signUpBtn.addEventListener('click', () => {
+      formTitle.innerText = 'Sign Up';
+      loginForm.style.display = 'none';
+      signupForm.style.display = 'block';
+    });
+
+    // Default state (Sign In)
+    signInBtn.click();
+  </script>
+
 </body>
 </html>
